--- a/captain.css
+++ b/captain.css
@@ -55,3 +55,15 @@ a {
 	border-radius: 5px;
 }
 
+
+
+#fade-wrapper {
+    display: none;
+    position: fixed;
+    height: 100vh;
+    width: 100vw;
+    background: rgba(0, 0, 0, 0.5);
+}
+
+
+
